--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .terraform/providers/registry.terraform.io/hashicorp/aws/3.72.0/linux_amd64/terraform-provider-aws_v3.72.0_x5
 .terraform.lock.hcl
 terraform.tfstate
+terraform.tfstate.backup
+.terraform.tfstate.lock.info
